--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,19 @@
   cursor: pointer;
   margin-top: 10px;
 }
+
+/* body {
+  background-image: url('assets/bg.jpg');
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+
+
+
