--- a/src/components/LocationPermissionModel.css
+++ b/src/components/LocationPermissionModel.css
@@ -46,3 +46,17 @@
     opacity: 0.9;
   }
   
+
+  .permission-background {
+    background-image: url('../assets/bg.jpg'); /* Adjust the path accordingly */
+    background-size: cover; /* Ensures the image covers the entire area */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+    min-height: 100vh; /* Ensures the body covers the full viewport */
+    margin: 0; /* Remove default margin */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Center the content */
+  }
+  
